<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="@dimen/container_padding_x"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_alogin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_app"
            android:textSize="@dimen/header_subtitle_text"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="@dimen/container_padding_y_min"/>

        <TextView
            android:id="@+id/tv_alogin_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_desc_text"
            android:textSize="@dimen/list_desc_text"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_marginBottom="@dimen/container_padding_y_min"/>

        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_mail"
            android:background="@drawable/fill_input"
            style="@style/InputText.EdtText"/>

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/fill_input"
            style="@style/InputText.EdtText"/>

        <TextView
            android:id="@+id/tv_login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:padding="@dimen/padding_text"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins_regular"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_gravity="end"
            android:gravity="end"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            style="@style/CommonButton"
            android:textColor="@android:color/white"
            android:background="@drawable/fill_primary_button"
            android:layout_marginTop="@dimen/container_double_padding_y" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/container_double_padding_y"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/tv_login_doesnt_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text"
                android:gravity="center_horizontal|bottom"
                android:text="Tidak mempunyai akun?"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tv_login_register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_text"
                android:gravity="center_horizontal|bottom"
                android:text="@string/daftar"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"  />
</RelativeLayout>