<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_list_tower"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/list_space">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/list_corner"
        app:cardElevation="0dp"
        card_view:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/container_padding_x">

            <TextView
                android:id="@+id/tv_item_pengumumanin_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/inner_padding"
                android:text="@string/pendaftaran_ulang_dibuka"
                android:textSize="@dimen/card_title_text"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:id="@+id/tv_item_pengumumanin_tujuan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/to_all"
                android:textSize="@dimen/card_desc_text"
                android:layout_marginBottom="@dimen/inner_padding"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/tv_item_pengumumanin_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/example_desc_pengumuman"
                android:textSize="@dimen/card_desc_text"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/list_space"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/tv_item_pengumumanin_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/example_date_pengumuman_inside"
                android:gravity="end"
                android:textSize="@dimen/card_desc_text"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_semibold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>