<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_aprofile_header">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/vc_toolbar_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/container_padding_x"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/container_padding_x"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/tv_aprofile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubah_profil"
                android:layout_marginStart="@dimen/list_space"
                android:textSize="@dimen/header_title_text"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppins_semibold" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rl_aprofile_header"
        style="@style/DefaultMargin">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:layout_margin="@dimen/inner_padding"
            android:layout_gravity="center"
            android:src="@drawable/example_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/ubah_foto_profil"
            android:textSize="@dimen/list_title_text"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginBottom="@dimen/container_padding_x"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kelas_siswa"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tahun_ajaran"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_tahunajaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tahun_ajaran"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_jeniskelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jenis_kelamin"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_lahir"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:drawableEnd="@drawable/ic_mode_edit"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_hp_orang_tua"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_nohportu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_hp_orang_tua"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:drawableEnd="@drawable/ic_mode_edit"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_orang_tua"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_namaortu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_orang_tua"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_sekolah"
            style="@style/LabelText"/>
        <EditText
            android:id="@+id/edt_aprofile_asalsekolah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/asal_sekolah"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"
            style="@style/InputText.EdtTextNoMargin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorUnSelect"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            style="@style/CommonButton"
            android:textColor="@android:color/white"
            android:background="@drawable/fill_primary_button"
            android:layout_marginTop="@dimen/container_double_padding_y" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_aprofile_batalsimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="28dp"
        app:cardCornerRadius="@dimen/list_corner"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ListTitle"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/container_padding_x"
            android:layout_marginBottom="@dimen/container_padding_y">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_aprofile_batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:layout_marginEnd="@dimen/container_padding_x"
                app:cardCornerRadius="@dimen/list_corner"
                app:cardBackgroundColor="@color/colorUnSelect">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/container_padding_x"
                    android:text="@string/batal"
                    android:textColor="@android:color/white"
                    style="@style/CommonButton"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_aprofile_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardCornerRadius="@dimen/list_corner"
                app:cardBackgroundColor="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/container_padding_x"
                    android:text="@string/simpan"
                    android:textColor="@android:color/white"
                    style="@style/CommonButton"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>